# cpp-match

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: match.hpp
test/: destructure.cpp  integral.cpp  string.cpp  variant.cpp
